Browserify, Babel y Page.js

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,15 @@ block content
 	h1.
 		Buenas tardes #{nombre}, tu edad es #{edad} años
 
+	h2#title
+	
+	div
+		a(href="/").
+			Index
+				
+		a(href="/about").
+			About
+
 	div
 		h2.
 			Lenguajes utilizados
